@@ -8,4 +8,11 @@
                  [cheshire  "5.3.1"]]
   :profiles {:dev {:dependencies [[compojure "1.1.8"]]
                    :plugins [[lein-ring "0.8.11"]]
-                   :ring {:handler clojure-miniprofiler.example/app}}})
+                   :ring {:handler clojure-miniprofiler.example/app}}
+             :bench {:dependencies [[criterium "0.4.1"]
+                                    [ring "1.2.0"]
+                                    [compojure "1.1.8"]]
+                     :main clojure-miniprofiler.bench
+                     :source-paths ["src" "bench"]
+                     :jvm-opts ^:replace
+                     ["-Xms1024m" "-Xmx1024m" "-XX:+UseParNewGC" "-XX:+UseConcMarkSweepGC" "-server" "-XX:+CMSParallelRemarkEnabled" "-XX:+AggressiveOpts" "-XX:+UseFastAccessorMethods" "-Djava.awt.headless=true"]}})
